# zebra

./: Cargo.toml  README.md
doc/: STD.md
lib/std/: iter.zebra  prelude.zebra  slice.zebra  string.zebra  vector.zebra
src/: common.rs  db.rs  lib.rs  main.rs  types.rs
src/backend/: check.rs  mod.rs  typed_ir.rs
src/frontend/: mod.rs
src/frontend/lex/: mod.rs  token.rs
src/frontend/parse/: ast.rs  mod.rs
src/parse/: ast.rs  mod.rs  parser.rs  scanner.rs  token.rs
